--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-spring.application.name=demo
+spring.application.name=asdf
+spring.servlet.multipart.max-file-size=128000KB
+spring.servlet.multipart.max-request-size=128000KB
+# Web properties
+# spring.servlet.multipart.max-file-size=10MB
+# spring.servlet.multipart.max-request-size=10MB
+
+# spring.servlet.multipart.max-file-size=128KB
+# spring.servlet.multipart.max-request-size=128KB
+
+# Server properties
+server.tomcat.max-http-form-post-size=100000000
+server.tomcat.max-swallow-size=100000000
+# server.tomcat.max-http-form-post-size
